fix:代码格式优化;入参描述添加是否非空;jsw打包